Maven 4 & Integration Fixes (#208)
* update maven wrapper to 4.0.0-rc-5
* parent tag updates for maven 4
* update datastore location & logic for provider test annotations
* Split integration tests that require multiple datastore instances
* implement changesetwriterservicefactory and update test configurations
* update protobuf round-trip and performance tests to account for datastore startup time & duplicate components in new starter data
* move versions to properties in tinkar-bom
* Implement lockfile for export waiting
* Convert ForwardReferenceChangeSetTestSuite to lockfile-driven tests
* fix property name
* fix test startup method order
* fix error looking for changeset lock file before it is created
* fix error looking for export lock file before it is created
* integration test workaround for known starter data load bug
* update tinkar-bom
* cleanup