@@ -1,3 +1,3 @@
 -Djava.awt.headless=true
-
+--enable-preview
 -Ddevelocity.scan.disabled=true
